# taskiq-dashboard

./: .dockerignore  .gitignore  .pre-commit-config.yml  404.html  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  hatch_build.py  index.html  mkdocs.yml  objects.inv  package.json  pnpm-lock.yaml  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: code-check.yml  release_docker_hub.yml  release_docs.yml  release_pypi.yml
conf/: .env.example
contributing/: index.html
docker/: entrypoint.sh  start.sh
docs/: contributing.md  index.md  reference.md
docs/assets/: custom.css
docs/examples/: example_with_broker.py  example_with_schedule_source.py  example_with_scheduler.py
docs/tutorial/: cleanup.md  run_with_broker.md  run_with_scheduler.md
examples/: example_with_broker.py  example_with_schedule_source.py  example_with_scheduler.py
reference/: index.html
scripts/: populate_db.py
search/: search_index.json
taskiq_dashboard/: dependencies.py
taskiq_dashboard/api/: __init__.py  __main__.py  application.py  templates.py
taskiq_dashboard/api/handlers/: dashboard.py  system.py
taskiq_dashboard/api/routers/: __init__.py  action.py  dashboard.py  event.py  exception_handlers.py  schedule.py  system.py  task.py
taskiq_dashboard/api/static/: alpine.js
taskiq_dashboard/api/static/css/: tailwind.css
taskiq_dashboard/api/static/images/: apple.avif  catalog.avif
taskiq_dashboard/api/templates/: 404.html  dashboard.html  home.html  schedule_details.html  schedule_page.html  task_details.html
taskiq_dashboard/api/templates/partial/: head.html  header.html  notification.html  task_list.html  task_list_item.html  task_rows.html
taskiq_dashboard/api/templates/scripts/: copy-button.js  focus_on_search_field.js
taskiq_dashboard/domain/dto/: cleanup.py  task.py  task_status.py
taskiq_dashboard/domain/repositories/: __init__.py
taskiq_dashboard/domain/services/: __init__.py  cleanup_service.py  task_service.py
taskiq_dashboard/infrastructure/: __init__.py  settings.py
taskiq_dashboard/infrastructure/database/: schemas.py  session_provider.py
taskiq_dashboard/infrastructure/database/migrations/: __init__.py  __main__.py  env.py
taskiq_dashboard/infrastructure/database/migrations/versions/: 2025-04-17_tasks.py
taskiq_dashboard/infrastructure/repositories/: __init__.py  task.py
taskiq_dashboard/infrastructure/services/: __init__.py  cleanup_service.py  schema_service.py  task_service.py
taskiq_dashboard/interface/: application.py  middleware.py
tests/integration/: conftest.py  factories.py  test_cleanup_service.py  test_task_service.py
tests/integration/test_api/: test_event_handler.py
tests/unit/: test_cleanup_runner.py  test_middleware.py
tutorial/run_with_broker/: index.html
tutorial/run_with_scheduler/: index.html
