[project]
name = "taskiq-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.0",
    "litestar[standard,jinja]>=2.15.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120
exclude = [
    ".ruff_cache",
    ".venv",
    "venv",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
multiline-quotes = "double"
docstring-quotes = "double"
inline-quotes = "single"


[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
