[project]
name = "taskiq-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.0",
    "litestar[standard,jinja]>=2.15.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
    "prek>=0.2.8",
]
lint = [
    "ruff>=0.14.0",
    "bandit>=1.8.6",
    "codespell>=2.4.1",
    "zizmor>=1.15.2",
    # type check
    "mypy>=1.18.1",
]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
]
docs = [
    "mkdocs-material>=9.6.22",
    "mkdocstrings-python>=1.18.2",
]

[tool.ruff]
line-length = 120
exclude = [
    ".ruff_cache",
    ".venv",
    "venv",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
multiline-quotes = "double"
docstring-quotes = "double"
inline-quotes = "single"


[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
platform = "linux"
follow_imports = "normal"
ignore_missing_imports = false
mypy_path = "stubs"
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_return_any = true
warn_unreachable = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
modules = ["speechkit"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
